--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
