--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.0.10",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
+    "js-cookie": "^3.0.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
