--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.1",
     "next": "12.2.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
